--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                             <i class="bi-envelope me-2"></i>
 
                             <a href="mailto:info@company.com">
-                                zain2206d@aptechgdn.net
+                                rabeel.naveed786@gmail.com
                             </a>
                         </p>
                     </div>
@@ -727,7 +727,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                                         <i class="bi-envelope me-2"></i>
 
                                         <a href="zain2206d@aptechgdn.net">
-                                            zain2206d@aptechgdn.net
+                                          rabeel.naveed786@gmail.com
                                         </a>
                                     </p>
 
@@ -741,7 +741,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                                 <h2>Contact form</h2>
 
                                 <p class="mb-4">Or, you can just send an email:
-                                    <a href="#">info@charity.org</a>
+                                    <a href="#">rabeel.naveed786@gmail.com</a>
                                 </p>
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-12">
@@ -789,7 +789,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                             <i class="bi-envelope me-2"></i>
 
                             <a href="mailto:info@yourgmail.com" class="site-footer-link">
-                                zain2206d@aptechgdn.net
+                                rabeel.naveed786@gmail.com
                             </a>
                         </p>
 
