--- a/donate.html
+++ b/donate.html
@@ -37,7 +37,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                             <i class="bi-envelope me-2"></i>
 
                             <a href="mailto:zain2206d@aptechgdn.net">
-                                zain2206d@aptechgdn.net
+                               rabeel.naveed786@gmail.com
                             </a>
                         </p>
                     </div>
@@ -291,7 +291,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                             <i class="bi-envelope me-2"></i>
 
                             <a href="mailto:donate@charity.org" class="site-footer-link">
-                                zain2206d@aptechgdn.net
+                                rabeel.naveed786@gmail.com
                             </a>
                         </p>
 
